feat: generate parameter and reponse
